WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
146393
REGRESSION: Page footers are displayed above the bottom of the WebView due to tiled scaling
https://bugs.webkit.org/show_bug.cgi?id=146393
Summary
REGRESSION: Page footers are displayed above the bottom of the WebView due to...
Tim Horton
Reported
2015-06-27 23:16:59 PDT
REGRESSION: Page footers are displayed above the bottom of the WebView due to tiled scaling
Attachments
Patch
(2.47 KB, patch)
2015-06-27 23:18 PDT
,
Tim Horton
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2015-06-27 23:18:43 PDT
Created
attachment 255720
[details]
Patch
Sam Weinig
Comment 2
2015-06-28 07:35:07 PDT
Comment on
attachment 255720
[details]
Patch Can we test this? Do we have layout test support for tiled scaling mode?
WebKit Commit Bot
Comment 3
2015-06-28 08:34:14 PDT
Comment on
attachment 255720
[details]
Patch Clearing flags on attachment: 255720 Committed
r186045
: <
http://trac.webkit.org/changeset/186045
>
WebKit Commit Bot
Comment 4
2015-06-28 08:34:18 PDT
All reviewed patches have been landed. Closing bug.
Simon Fraser (smfr)
Comment 5
2015-06-29 10:14:56 PDT
Comment on
attachment 255720
[details]
Patch No layout test?
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug