REGRESSION: Page footers are displayed above the bottom of the WebView due to tiled scaling https://bugs.webkit.org/show_bug.cgi?id=146393 <rdar://problem/21113217>

Reviewed by Sam Weinig.

* WebProcess/WebPage/mac/TiledCoreAnimationDrawingArea.mm:
(WebKit::TiledCoreAnimationDrawingArea::scaleViewToFitDocumentIfNeeded):
Don't include the top content inset in the layout size.


Canonical link: https://commits.webkit.org/164478@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@186045 268f45cc-cd09-0410-ab3c-d52691b4dbfc